--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
   </aside>
   <main>
     <div class="main-banner">
-      <img src="resourse/Img/mens-hero-dt-data.jpg" alt="Brand Banner" class="banner-img">
+      <img src="resourse/CODE STUDIOS/Finished/Code Studios 04.jpg" alt="Brand Banner" class="banner-img">
       <div class="banner-overlay"></div>
       <div class="banner-content">
         <div class="banner-logo">
@@ -631,23 +631,23 @@
         <h2 class="scroll-animate from-left">SHOP BY CATEGORY</h2>
         <div class="category-list">
           <a class="category-card scroll-animate from-bottom stagger-1" href="pages/tshirts.html">
-            <img src="resourse/Img/tops-t-shirts-data.jpg" alt="T-shirts">
+            <img src="resourse/CODE STUDIOS/Finished/Code Studios 034.jpg" alt="T-shirts">
             <span>T-shirts</span>
           </a>
           <a class="category-card scroll-animate from-bottom stagger-2" href="pages/shirts.html">
-            <img src="resourse/Img/shirts-data.jpg" alt="Shirts">
+            <img src="resourse/CODE STUDIOS/Finished/Code Studios 039.jpg" alt="Shirts">
             <span>Shirts</span>
           </a>
           <a class="category-card scroll-animate from-bottom stagger-3" href="pages/trousers.html">
-            <img src="resourse/Img/trousers-chinos-data.jpg" alt="Trousers">
+            <img src="resourse/CODE STUDIOS/Finished/Code Studios 010.jpg" alt="Trousers">
             <span>Trousers</span>
           </a>
           <a class="category-card scroll-animate from-bottom stagger-4" href="pages/shorts.html">
-            <img src="resourse/Img/short.webp" alt="Shorts">
+            <img src="resourse/CODE STUDIOS/Finished/Code Studios 06.jpg" alt="Shorts">
             <span>Shorts</span>
           </a>
           <a class="category-card scroll-animate from-bottom stagger-5" href="pages/shoes.html">
-            <img src="resourse/Img/716979.webp" alt="Shoes">
+            <img src="resourse/CODE STUDIOS/Finished/Code Studios 044.jpg" alt="Shoes">
             <span>Shoes</span>
           </a>
         </div>
@@ -655,7 +655,7 @@
     </div>
 
     <div class="main-banner second-banner">
-      <img src="resourse/Img/hoodies-sweatshirts-data.jpg" alt="Who Move Different Banner" class="banner-img">
+      <img src="resourse/CODE STUDIOS/Finished/Code Studios 08.jpg" alt="Who Move Different Banner" class="banner-img">
       <div class="banner-content banner-content-center">
         <div class="banner-text-small">FOR THE ONES</div>
         <div class="banner-text-large">WHO MOVE DIFFERENT</div>
